--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ html {
 
 .music-content-bg {
     height: 100vh; 
-    background-image: url("image.jpg");
+    background-image: url("image.webp");
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
